--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-navigation/stack": "^5.14.2",
     "expo": "~40.0.0",
     "expo-font": "^8.4.0",
+    "expo-image-picker": "^10.0.0",
+    "expo-permissions": "^10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -25,6 +27,7 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12"
   },
