--- a/package.json
+++ b/package.json
@@ -19,17 +19,26 @@
     "expo-permissions": "^10.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
+    "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-appearance": "^0.3.4",
+    "react-native-dark-mode-switch": "^0.0.0-alpha.1",
     "react-native-dropdown-picker": "^4.0.2",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^1.10.1",
+    "react-native-maps": "0.27.1",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-svg": "^10.1.0",
     "react-native-vector-icons": "^8.0.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
