--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
+    "@expo-google-fonts/inter": "^0.1.0",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-picker/picker": "^1.9.11",
     "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
     "expo": "~40.0.0",
@@ -18,17 +23,22 @@
     "expo-image-picker": "^10.0.0",
     "expo-permissions": "^10.0.0",
     "expo-status-bar": "~1.0.3",
+    "native-base": "^2.15.2",
+    "radio-button-react-native": "^1.1.6",
     "react": "16.13.1",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-appearance": "^0.3.4",
+    "react-native-btr": "^1.1.5",
     "react-native-dark-mode-switch": "^0.0.0-alpha.1",
     "react-native-dropdown-picker": "^4.0.2",
+    "react-native-elements": "^3.2.0",
     "react-native-event-listeners": "^1.0.7",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.7.1",
+    "react-native-popup-menu": "^0.15.10",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
@@ -36,6 +46,7 @@
     "react-native-svg": "^10.1.0",
     "react-native-vector-icons": "^8.0.0",
     "react-native-web": "~0.13.12",
+    "react-navigation-drawer": "^2.7.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
